[metadata]
name = bandit_sarif_formatter
author = Larry Golding
author-email = larrygolding@comcast.net
summary = A Bandit formatter for the Static Analysis Results Interchange Format (SARIF) Version 2.1.0 file format.
description-file = README.md
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    bandit_sarif_formatter

[entry_points]
bandit.formatters =
    sarif = bandit_sarif_formatter.formatter:report