[metadata]
name = bandit_sarif_formatter
author = Microsoft Corporation
author-email = v-lgold@microsoft.com
summary = A Bandit formatter for the Static Analysis Results Interchange Format (SARIF) Version 2.1.0 file format.
home-page = https://github.com/microsoft/bandit-sarif-formatter
description-file = README.rst
license = MIT
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
python_requires = >= 2.7
install_requires =
    jschema-to-python
    sarif-om

[files]
packages =
    bandit_sarif_formatter

[entry_points]
bandit.formatters =
    sarif = bandit_sarif_formatter.formatter:report